feat: created the structure in html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,30 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>This is Arjun's webpage</h1>
-    <p>I am attending neog bootcamp and this is my portfolio and hope you would like it, alrighty!!!</p>
+    <header>
+        <h1>This is Arjun's webpage</h1>
+        <ul>
+            <li>Home</li>
+            <li>Projects</li>
+            <li>Blogs</li>
+        </ul>
+    </header>
+    <img src="images/skateboard.svg">
+    <div>
+        <p>Its been an amaing journey so far in this neog camp and these are the skills I have developed</p>
+        <img src="images/skills.svg">
+    </div>
     <hr>
+    <div>
+        <p>These are the various Projects I have created until now. Please go through and provide valuable feedback</p>
+        <img src="images/app.svg">
+    </div>
+    <hr>
+    <div>
+        <p>Few attempts at blogging</p>
+        <img src="images/blog.svg">
+    </div>
+    <hr>
+
 </body>
 </html>
