style: added the entire styling for home page

--- a/index.html
+++ b/index.html
@@ -8,30 +8,64 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <div class="header">
     <header>
-        <h1>This is Arjun's webpage</h1>
-        <ul>
-            <li>Home</li>
-            <li>Projects</li>
-            <li>Blogs</li>
-        </ul>
+        <h1>Arjun <span style="color: #F9A826">Dev</span></h1>
+        <div class="top-menu">
+            <ul >
+            <li class="top-menu-item">Home</li>
+            <li class="top-menu-item">Projects</li>
+            <li class="top-menu-item">Blogs</li>
+            </ul>
+        </div>
     </header>
-    <img src="images/skateboard.svg">
-    <div>
-        <p>Its been an amaing journey so far in this neog camp and these are the skills I have developed</p>
-        <img src="images/skills.svg">
     </div>
-    <hr>
-    <div>
-        <p>These are the various Projects I have created until now. Please go through and provide valuable feedback</p>
+    <div class="section">
+        <img class = "image-1" src="images/skateboard.svg">
+        <div class = "section-text"><h2>About me:</h2>
+        <p>I have a total of about 6.5 years of experience with 4 years in testing and 2.5 years of experience as a trainer in Blockchain technology. Made many attempts to learn front end before, but guess, AM FINALLY SUCCEEDING NOW!!</p>
+    </div> 
+    </div>
+    <div class="section">
+        <div class = "section-text"><h2>Skills:</h2>
+            <p>These are skills acquired both in neog camp and also based on previous experience</p>
+            <div class= "section2">
+                <ul>
+                    <li>html</li>
+                    <li>css</li>
+                    <li>Javascript</li>
+                </ul>
+                <ul>
+                    <li>nodejs</li>
+                    <li>git</li>
+                    <li>github</li>
+                </ul>
+                <ul>
+                    <li>reactjs</li>
+                    <li>ganache</li>
+                    <li>remix</li>
+                </ul>
+                <ul>
+                    <li>solidity</li>
+                    <li>truffle</li>
+                    <li>openzepelin</li>
+                </ul>
+            </div>
+        </div> 
+        <p><img class = "image-2" src="images/skills.svg"></p>
+    </div>
+    <div class="section">
         <img src="images/app.svg">
+        <div class = "section-text"><h2>Projects:</h2>
+        <p>There are a handful of projects which I have created during the level-Zero of the Neog camp. Click <span style="color: #F9A826">here</span> to view all the projects</p>
+    </div> 
     </div>
-    <hr>
-    <div>
-        <p>Few attempts at blogging</p>
+    <div class="section">
+        <div class = "section-text"><h2>Blog:</h2>
+            <p>Interested in bitcoin or any other cryptocurrencies? Want to dive into blockchain technology but do not know where to start?</p> <p>Checkout the blogs <span style="color: #F9A826">here</span> and let me know what you think ;)</p>
+        </div> 
         <img src="images/blog.svg">
     </div>
     <hr>
-
 </body>
 </html>
