--- a/index.html
+++ b/index.html
@@ -67,5 +67,12 @@
         <img src="images/blog.svg">
     </div>
     <hr>
+    <footer>
+        <img src="images/linkedin-icon.png">
+        <img src="images/github-icon.png">
+        <img src="images/telegram-icon.png">
+        <img src="images/twitter-icon.png">
+        <img src="images/instagram-icon.png">
+    </footer>
 </body>
 </html>
