--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="header">
     <header>
-        <h1>Arjun <span style="color: #F9A826">Dev</span></h1>
+        <h1><a href='/' >Arjun <span style="color: #F9A826">Dev</span></a></h1>
         <div class="top-menu">
             <ul >
-            <li class="top-menu-item">Home</li>
-            <li class="top-menu-item">Projects</li>
-            <li class="top-menu-item">Blogs</li>
+            <li class="top-menu-item"><a href='/' >Home</a></li>
+            <li class="top-menu-item"><a href='/' >Projects</a></li>
+            <li class="top-menu-item"><a href='/' >Blogs</a></li>
             </ul>
         </div>
     </header>
@@ -57,22 +57,22 @@
     <div class="section">
         <img src="images/app.svg">
         <div class = "section-text"><h2>Projects:</h2>
-        <p>There are a handful of projects which I have created during the level-Zero of the Neog camp. Click <span style="color: #F9A826">here</span> to view all the projects</p>
+        <p>There are a handful of projects which I have created during the level-Zero of the Neog camp. Click <a href = '/'><span style="color: #F9A826">here</span></a> to view all the projects</p>
     </div> 
     </div>
     <div class="section">
         <div class = "section-text"><h2>Blog:</h2>
-            <p>Interested in bitcoin or any other cryptocurrencies? Want to dive into blockchain technology but do not know where to start?</p> <p>Checkout the blogs <span style="color: #F9A826">here</span> and let me know what you think ;)</p>
+            <p>Interested in bitcoin or any other cryptocurrencies? Want to dive into blockchain technology but do not know where to start?</p> <p>Checkout the blogs <a href = '/'><span style="color: #F9A826">here</span></a> and let me know what you think ;)</p>
         </div> 
         <img src="images/blog.svg">
     </div>
     <hr>
     <footer>
-        <img src="images/linkedin-icon.png">
-        <img src="images/github-icon.png">
-        <img src="images/telegram-icon.png">
-        <img src="images/twitter-icon.png">
-        <img src="images/instagram-icon.png">
+        <a href='/'><img src="images/linkedin-icon.png"></a>
+        <a href='/'><img src="images/github-icon.png"></a>       
+        <a href='/'><img src="images/telegram-icon.png"></a>
+        <a href='/'><img src="images/twitter-icon.png"></a>        
+        <a href='/'><img src="images/instagram-icon.png"></a>
     </footer>
 </body>
 </html>
