feat: added other html pages

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="header">
     <header>
-        <h1><a href='/' >Arjun <span style="color: #F9A826">Dev</span></a></h1>
+        <h1><a href='/index.html' >Arjun <span style="color: #F9A826">Dev</span></a></h1>
         <div class="top-menu">
             <ul >
-            <li class="top-menu-item"><a href='/' >Home</a></li>
-            <li class="top-menu-item"><a href='/' >Projects</a></li>
-            <li class="top-menu-item"><a href='/' >Blogs</a></li>
+            <li class="top-menu-item"><a href='/index.html' >Home</a></li>
+            <li class="top-menu-item"><a href='/projects.html' >Projects</a></li>
+            <li class="top-menu-item"><a href='/blogs.html' >Blogs</a></li>
             </ul>
         </div>
     </header>
@@ -23,7 +23,7 @@
     <div class="section">
         <img class = "image-1" src="images/skateboard.svg">
         <div class = "section-text"><h2>About me:</h2>
-        <p>I have a total of about 6.5 years of experience with 4 years in testing and 2.5 years of experience as a trainer in Blockchain technology. Made many attempts to learn front end before, but guess, AM FINALLY SUCCEEDING NOW!!</p>
+        <p>I have total experience of about 6.5 years with 4 years in testing and 2.5 years of experience as a trainer in Blockchain technology. Made many attempts to learn front end before, but I think, AM FINALLY SUCCEEDING NOW!!</p>
     </div> 
     </div>
     <div class="section">
@@ -68,11 +68,11 @@
     </div>
     <hr>
     <footer>
-        <a href='/'><img src="images/linkedin-icon.png"></a>
-        <a href='/'><img src="images/github-icon.png"></a>       
-        <a href='/'><img src="images/telegram-icon.png"></a>
-        <a href='/'><img src="images/twitter-icon.png"></a>        
-        <a href='/'><img src="images/instagram-icon.png"></a>
+        <a href='https://www.linkedin.com/in/arjundevn/'><img src="images/linkedin-icon.png"></a>
+        <a href='https://github.com/arjundevn/'><img src="images/github-icon.png"></a>       
+        <a href='https://t.me/arjun_dev'><img src="images/telegram-icon.png"></a>
+        <a href='https://twitter.com/arjun_devn'><img src="images/twitter-icon.png"></a>        
+        <a href='https://www.instagram.com/rjndv/'><img src="images/instagram-icon.png"></a>
     </footer>
 </body>
 </html>
