style: minor style changes

--- a/blogs.html
+++ b/blogs.html
@@ -19,6 +19,9 @@
             </ul>
         </div>
     </header>
+    <div class="heading-block">
+        <h1>PROJECTS</h1>
+    </div>
     <hr>
     <footer>
         <a href='https://www.linkedin.com/in/arjundevn/''><img src="images/linkedin-icon.png"></a>
