--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
     <div class="section">
         <img src="images/app.svg">
         <div class = "section-text"><h2>Projects:</h2>
-        <p>There are a handful of projects which I have created during the level-Zero of the Neog camp. Click <a href = '/'><span style="color: #F9A826">here</span></a> to view all the projects</p>
+        <p>There are a handful of projects which I have created during the level-Zero of the Neog camp. Click <a href = '/projects.html'><span style="color: #F9A826">here</span></a> to view all the projects</p>
     </div> 
     </div>
     <div class="section">
         <div class = "section-text"><h2>Blog:</h2>
-            <p>Interested in bitcoin or any other cryptocurrencies? Want to dive into blockchain technology but do not know where to start?</p> <p>Checkout the blogs <a href = '/'><span style="color: #F9A826">here</span></a> and let me know what you think ;)</p>
+            <p>Interested in bitcoin or any other cryptocurrencies? Want to dive into blockchain technology but do not know where to start?</p> <p>Checkout the blogs <a href = '/blogs.html'><span style="color: #F9A826">here</span></a> and let me know what you think ;)</p>
         </div> 
         <img src="images/blog.svg">
     </div>
