feat: completed the projects page until Mark5

--- a/projects.html
+++ b/projects.html
@@ -19,10 +19,64 @@
             </ul>
         </div>
     </header>
+    
     <div class="heading-block">
         <h1>PROJECTS</h1>
     </div>
 
+
+    <div class="heading-content">
+        <div>
+            <h2>1 . Bachelor Party eligibility</h2>
+            <small>27th sept 2021</small>
+            <small>
+                <span style='color: var(--theme-color)'>[MarkOne]</span>
+            </small>
+            <p>A simple CLI app made using NodeJS. Sent it to my friends to see how well we know one of our mates who is soon going to get hitched!</p>
+            <a href= 'https://github.com/arjundevn/Kaushik-s-Bachelor-party'>
+                <small class='button-source'>Source code</small>
+            </a>
+            <a href = 'https://replit.com/@arjundevn/Kaushiks-Bachelor-party?v=1'>
+                <small class='button-project'>Live Project</small>
+            </a>   
+        </div>  
+    </div>
+
+
+    <div class="heading-content">
+        <div>
+            <h2>2 . Marvel Quiz</h2>
+            <small>28th sept 2021</small>
+            <small>
+                <span style='color: var(--theme-color)'>[MarkTwo]</span>
+            </small>
+            <p>A simple CLI NodeJS app to test your Marvel cinematic universe knowledge. Answer all the five questions and show who is the boss! </p>
+            <a href= 'https://github.com/arjundevn/neog-Marvel-Quiz'>
+                <small class='button-source'>Source code</small>
+            </a>
+            <a href = 'https://replit.com/@arjundevn/Marvel-Quiz?v=1'>
+                <small class='button-project'>Live Project</small>
+            </a>   
+        </div>  
+    </div>
+
+
+    <div class="heading-content">
+        <div>
+            <h2>3 . Portfolio</h2>
+            <small>29th sept 2021</small>
+            <small><span style='color: var(--theme-color)'>[MarkThree][markFour][markFive]</span>
+            </small>
+            <p>A portfolio website containing all the projects done for level-Zero of the neog camp and also a few exciting blogs! </p>
+            <a href= 'https://github.com/arjundevn/portfolio'>
+                <small class='button-source'>Source code</small>
+            </a>
+            <a href = 'https://arjun-dev.netlify.app/'>
+                <small class='button-project'>Live Project</small>
+            </a>   
+        </div>  
+    </div>
+    
     <hr>
     <footer>
         <a href='https://www.linkedin.com/in/arjundevn/'><img src="images/linkedin-icon.png"></a>
