fix:changed title of blogs page

--- a/blogs.html
+++ b/blogs.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <div class="heading-block">
-        <h1>PROJECTS</h1>
+        <h1>BLOGS</h1>
     </div>
     <hr>
     <footer>
