feat: created blog main page and added 2 blogs

--- a/blogs.html
+++ b/blogs.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet" />
-    <title>Projects</title>
+    <title>Blogs</title>
 </head>
 <body>
     <div class="header">
@@ -19,9 +19,39 @@
             </ul>
         </div>
     </header>
+
+
     <div class="heading-block">
         <h1>BLOGS</h1>
     </div>
+
+    <div class="heading-content">
+        <div>
+            <h2>Blog #1: What is Blockchain?</h2>
+            <small>29th sept 2021</small>
+            <p>Blockchain is a new technology wave that has already started revolutionizing and disrupting
+                business, social and political interactions. It started in 2008 when an anonymous identity called
+                Satoshi Nakamoto introduced Bitcoin as a “Peer to Peer Electronic Cash system”...... </p>
+            <a href = '/blog1.html'>
+                <small class='button-project'>Read more</small>
+            </a>   
+        </div>  
+    </div>
+
+    <div class="heading-content">
+        <div>
+            <h2>Blog #2: Why Blockchain is revolutionary?</h2>
+            <small>29th sept 2021</small>
+            <p>Network: A centralized network is where all the nodes or participants in a network
+                connect to a single central authority for all the transactions between them. This central party acts
+                as the source of truth and provides the necessary validation and trust in the network....... </p>
+            <a href = '/blog2.html'>
+                <small class='button-project'>Read more</small>
+            </a>   
+        </div>  
+    </div>
+
+
     <hr>
     <footer>
         <a href='https://www.linkedin.com/in/arjundevn/''><img src="images/linkedin-icon.png"></a>
