feat: added marksix project

--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,22 @@
             </a>   
         </div>  
     </div>
+
+    <div class="heading-content">
+        <div>
+            <h2>4 . Minion Lingo</h2>
+            <small>01st Oct 2021</small>
+            <small><span style='color: var(--theme-color)'>[MarkThree][markFour][markFive]</span>
+            </small>
+            <p>An app to convert English to the language of Minions!</p>
+            <a href= 'https://github.com/arjundevn/How-to-speak-minion'>
+                <small class='button-source'>Source code</small>
+            </a>
+            <a href = 'https://minionlingo.netlify.app/'>
+                <small class='button-project'>Live Project</small>
+            </a>   
+        </div>  
+    </div>
     
     <hr>
     <footer>
