fix:marksix rename

--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
         <div>
             <h2>4 . Minion Lingo</h2>
             <small>01st Oct 2021</small>
-            <small><span style='color: var(--theme-color)'>[MarkThree][markFour][markFive]</span>
+            <small><span style='color: var(--theme-color)'>[MarkSix]</span>
             </small>
             <p>An app to convert English to the language of Minions!</p>
             <a href= 'https://github.com/arjundevn/How-to-speak-minion'>
