--- a/projects.html
+++ b/projects.html
@@ -92,6 +92,22 @@
             </a>   
         </div>  
     </div>
+
+    <div class="heading-content">
+        <div>
+            <h2>5 . Pirate Lingo</h2>
+            <small>01st Oct 2021</small>
+            <small><span style='color: var(--theme-color)'>[MarkSeven]</span>
+            </small>
+            <p>An app to convert English to the language of Jack Sparrow!</p>
+            <a href= 'https://github.com/arjundevn/pirate-translator'>
+                <small class='button-source'>Source code</small>
+            </a>
+            <a href = 'https://app-pirate-translator.netlify.app/'>
+                <small class='button-project'>Live Project</small>
+            </a>   
+        </div>  
+    </div>
     
     <hr>
     <footer>
