feat: added mark8 and 9

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="section">
         <img src="images/app.svg">
         <div class = "section-text"><h2>Projects:</h2>
-        <p>There are a handful of projects which I have created during the level-Zero of the Neog camp. Click <a href = '/projects.html'><span style="color: #F9A826">here</span></a> to view all the projects</p>
+        <p>There are a handful of projects which I have created during the level-Zero of the Neog camp. </p><p>Click <a href = '/projects.html'><span style="color: #F9A826">here</span></a> to view all the projects</p>
     </div> 
     </div>
     <div class="section">
