--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,39 @@
             </a>   
         </div>  
     </div>
+
+    <div class="heading-content">
+        <div>
+            <h2>6 . Musical Instruments Emojis</h2>
+            <small>01st Oct 2021</small>
+            <small><span style='color: var(--theme-color)'>[MarkEight]</span>
+            </small>
+            <p>Check if you identify these emojis of Musical Instruments</p>
+            <a href= 'https://github.com/arjundevn/musical-instruments-emojis'>
+                <small class='button-source'>Source code</small>
+            </a>
+            <a href = 'ir8l5.csb.app/'>
+                <small class='button-project'>Live Project</small>
+            </a>   
+        </div>  
+    </div>
     
+    <div class="heading-content">
+        <div>
+            <h2>7 . Ratings of music artists</h2>
+            <small>01st Oct 2021</small>
+            <small><span style='color: var(--theme-color)'>[MarkNine]</span>
+            </small>
+            <p>My personal ratings of a few top artists spanning through different genres of music</p>
+            <a href= 'https://github.com/arjundevn/music-artistts-rating'>
+                <small class='button-source'>Source code</small>
+            </a>
+            <a href = 'https://q0lm8.csb.app/'>
+                <small class='button-project'>Live Project</small>
+            </a>   
+        </div>  
+    </div>
+
     <hr>
     <footer>
         <a href='https://www.linkedin.com/in/arjundevn/'><img src="images/linkedin-icon.png"></a>
