fix:fixed link of mark8

--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,7 @@
             <a href= 'https://github.com/arjundevn/musical-instruments-emojis'>
                 <small class='button-source'>Source code</small>
             </a>
-            <a href = 'ir8l5.csb.app/'>
+            <a href = 'https://ir8l5.csb.app/'>
                 <small class='button-project'>Live Project</small>
             </a>   
         </div>  
