added palindrome app

--- a/projects.html
+++ b/projects.html
@@ -141,6 +141,22 @@
         </div>  
     </div>
 
+    <div class="heading-content">
+        <div>
+            <h2>11 . Palindrome Birthday</h2>
+            <small>02nd Oct 2021</small>
+            <small><span style='color: var(--theme-color)'>[MarkThirteen]</span>
+            </small>
+            <p>My personal ratings of a few top artists spanning through different genres of music</p>
+            <a href= 'https://github.com/arjundevn/palindrome-birthday'>
+                <small class='button-source'>Source code</small>
+            </a>
+            <a href = 'https://bdaypalindrom.netlify.app/'>
+                <small class='button-project'>Live Project</small>
+            </a>   
+        </div>  
+    </div>
+
     <hr>
     <footer>
         <a href='https://www.linkedin.com/in/arjundevn/'><img src="images/linkedin-icon.png"></a>
