added cash registry

--- a/projects.html
+++ b/projects.html
@@ -143,6 +143,22 @@
 
     <div class="heading-content">
         <div>
+            <h2>8 . Cash-register</h2>
+            <small>02nd Oct 2021</small>
+            <small><span style='color: var(--theme-color)'>[MarkTen]</span>
+            </small>
+            <p>A billing desk app to know the minimum amount of notes to be given as change</p>
+            <a href= 'https://github.com/arjundevn/cash-register'>
+                <small class='button-source'>Source code</small>
+            </a>
+            <a href = 'https://cashregstr.netlify.app/'>
+                <small class='button-project'>Live Project</small>
+            </a>   
+        </div>  
+    </div>
+
+    <div class="heading-content">
+        <div>
             <h2>11 . Palindrome Birthday</h2>
             <small>02nd Oct 2021</small>
             <small><span style='color: var(--theme-color)'>[MarkThirteen]</span>
