added lucky bday app

--- a/projects.html
+++ b/projects.html
@@ -159,6 +159,22 @@
 
     <div class="heading-content">
         <div>
+            <h2>9 . Lucky Birthday App</h2>
+            <small>02nd Oct 2021</small>
+            <small><span style='color: var(--theme-color)'>[MarkEleven]</span>
+            </small>
+            <p>Check if you have a really lucky birthday date</p>
+            <a href= 'https://github.com/arjundevn/birthday-luck-app'>
+                <small class='button-source'>Source code</small>
+            </a>
+            <a href = 'https://lucky-bur-day.netlify.app/'>
+                <small class='button-project'>Live Project</small>
+            </a>   
+        </div>  
+    </div>
+
+    <div class="heading-content">
+        <div>
             <h2>11 . Palindrome Birthday</h2>
             <small>02nd Oct 2021</small>
             <small><span style='color: var(--theme-color)'>[MarkThirteen]</span>
