--- a/projects.html
+++ b/projects.html
@@ -189,6 +189,22 @@
         </div>  
     </div>
 
+    <div class="heading-content">
+        <div>
+            <h2>11 . Profit Loss Calculator</h2>
+            <small>02nd Oct 2021</small>
+            <small><span style='color: var(--theme-color)'>[MarkFourteen]</span>
+            </small>
+            <p>App to check out if your stocks have yielded profit or a loss</p>
+            <a href= 'https://github.com/arjundevn/profit-loss-calculator'>
+                <small class='button-source'>Source code</small>
+            </a>
+            <a href = 'https://profit-loss-cal.netlify.app/'>
+                <small class='button-project'>Live Project</small>
+            </a>   
+        </div>  
+    </div>
+
     <hr>
     <footer>
         <a href='https://www.linkedin.com/in/arjundevn/'><img src="images/linkedin-icon.png"></a>
