added fun triangles project

--- a/projects.html
+++ b/projects.html
@@ -175,6 +175,22 @@
 
     <div class="heading-content">
         <div>
+            <h2>9 . Fun with Triangles App</h2>
+            <small>02nd Oct 2021</small>
+            <small><span style='color: var(--theme-color)'>[MarkTwelve]</span>
+            </small>
+            <p>Checkout if you remember stuff from school with respect to triangles</p>
+            <a href= 'https://github.com/arjundevn/fun-with-triangles'>
+                <small class='button-source'>Source code</small>
+            </a>
+            <a href = 'https://tri-anglefun.netlify.app/'>
+                <small class='button-project'>Live Project</small>
+            </a>   
+        </div>  
+    </div>
+
+    <div class="heading-content">
+        <div>
             <h2>11 . Palindrome Birthday</h2>
             <small>02nd Oct 2021</small>
             <small><span style='color: var(--theme-color)'>[MarkThirteen]</span>
@@ -191,7 +207,7 @@
 
     <div class="heading-content">
         <div>
-            <h2>11 . Profit Loss Calculator</h2>
+            <h2>12 . Profit Loss Calculator</h2>
             <small>02nd Oct 2021</small>
             <small><span style='color: var(--theme-color)'>[MarkFourteen]</span>
             </small>
