--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet" />
     <title>Portfolio</title>
+    <link rel="shortcut icon" type="images/ico" href="/images/favicon.ico"/>
 </head>
 <body>
     <div class="header">
